--- a/README.org
+++ b/README.org
@@ -4,12 +4,405 @@
 
 * Introduction
 This projects aims to make writing Arabic, Hebrew and Russian
-easier in Emacs and Vim by defining an intuitive
-keymap for ~QWERTY~ users.
+easier in Emacs and Vim by defining an intuitive keymap for ~QWERTY~
+users. If you are using another editor or want to contribute
+a language, you are welcome to contribute.
+
+This is a living document to try to find the most intuitive
+and easy to learn keymap for the languages found herein.
 
 This document is written in the form of a literate program,
 which produces the code in a self-contained way in the same
 document cite:LiteratePrograKnuth1984,Literate.prograRamsey1994.
+** Installation
+You can install all files just by doing
+#+begin_src sh :eval no
+make install
+#+end_src
+Otherwise you can follow the following instructions to understand
+the process in each editor.
+*** Emacs
+Copy the file you want from the dist folder somewhere in your computer.
+For instance, if you choose the arabic version of ~qwerty-everywhere~
+and you copy it into the path ~~/.emacs.d/arabic-qwerty-everywhere.el~,
+add the followint into you ~~/.emacs.d/init.el~ file
+
+#+begin_src emacs-lisp :exports code :results none :eval no
+(load "~/.emacs.d/arabic-qwerty-everywhere.el")
+#+end_src
+
+and now you can set this keymap by ~M-x set-input-method~
+and choosing the ~arabic-qwerty-everywhere~.
+
+*** Vim 
+Copy the file you want from the dist folder to ~~/.vim/keymaps/~
+and activate the keymap by doing
+#+begin_src vim :eval no
+:set keymap=arabic-qwerty-everywhere
+:set rightleft
+#+end_src
+in the case that you chose the arabic version.
+You can go back to your default by doing
+#+begin_src vim :eval no
+:set keymap
+:set norightleft
+#+end_src
+
+* Languages
+** Arabic
+*** Table
+#+name: arabic-table
+| Key | Unicode | Arabic | Name                        |
+|-----+---------+--------+-----------------------------|
+| a   |    0627 | ا      | ALEF                        |
+| A   |    0649 | ى      | ALEF MAKSURA                |
+| ~a  |    0622 | آ      | ALEF WITH MADDA ABOVE       |
+| 'a  |    0623 | أ      | ALEF with HAMZA ABOVE       |
+| 'i  |    0625 | إ      | ALEF with HAMZA BELOW       |
+| -a  |    0671 | ٱ      | ALEF WASLA                  |
+|-----+---------+--------+-----------------------------|
+| b   |    0628 | ب      | BEH                         |
+| p   |    067e | پ      | PEH                         |
+|-----+---------+--------+-----------------------------|
+| t   |    062a | ت      | TEH                         |
+| .t  |    062b | ث      | THEH                        |
+|-----+---------+--------+-----------------------------|
+| j   |    062c | ج      | JEEM                        |
+| H   |    062d | ح      | HAH                         |
+| x   |    062e | خ      | KHAH                        |
+| %h  |    0686 | چ      | TCHEH                       |
+| ^h  |    0685 | څ      | HAH WITH THREE DOTS ABOVE   |
+|-----+---------+--------+-----------------------------|
+| d   |    062f | د      | DAL                         |
+| .d  |    0630 | ذ      | THAL                        |
+|-----+---------+--------+-----------------------------|
+| z   |    0632 | ز      | ZAIN                        |
+| r   |    0631 | ر      | REH                         |
+|-----+---------+--------+-----------------------------|
+| .s  |    0634 | ش      | SHEEN                       |
+| s   |    0633 | س      | SEEN                        |
+|-----+---------+--------+-----------------------------|
+| c   |    0635 | ص      | SAD                         |
+| .c  |    0636 | ض      | DAD                         |
+|-----+---------+--------+-----------------------------|
+| Z   |    0638 | ظ      | ZAH                         |
+| .T  |    0638 | ظ      | ZAH                         |
+| T   |    0637 | ط      | TAH                         |
+|-----+---------+--------+-----------------------------|
+| g   |    063a | غ      | GHAIN                       |
+| e   |    0639 | ع      | AIN                         |
+|-----+---------+--------+-----------------------------|
+| q   |    0642 | ق      | QAF                         |
+| f   |    0641 | ف      | FEH                         |
+|-----+---------+--------+-----------------------------|
+| k   |    0643 | ك      | KAF                         |
+| l   |    0644 | ل      | LAM                         |
+| m   |    0645 | م      | MEEM                        |
+| n   |    0646 | ن      | NOON                        |
+|-----+---------+--------+-----------------------------|
+| h   |    0647 | ه      | HEH                         |
+| :h  |    0629 | ة      | TEH MARBUTA                 |
+|-----+---------+--------+-----------------------------|
+| w   |    0648 | و      | WAW                         |
+| 'w  |    0624 | ؤ      | WAW with HAMZA ABOVE        |
+|-----+---------+--------+-----------------------------|
+| y   |    064a | ي      | YEH                         |
+| 'y  |    0626 | ئ      | YEH with HAMZA ABOVE        |
+|-----+---------+--------+-----------------------------|
+| 0   |    0660 | ٠      | Arabic-Indic digit 0        |
+| 1   |    0661 | ١      | Arabic-Indic digit 1        |
+| 2   |    0662 | ٢      | Arabic-Indic digit 2        |
+| 3   |    0663 | ٣      | Arabic-Indic digit 3        |
+| 4   |    0664 | ٤      | Arabic-Indic digit 4        |
+| 5   |    0665 | ٥      | Arabic-Indic digit 5        |
+| 6   |    0666 | ٦      | Arabic-Indic digit 6        |
+| 7   |    0667 | ٧      | Arabic-Indic digit 7        |
+| 8   |    0668 | ٨      | Arabic-Indic digit 8        |
+| 9   |    0669 | ٩      | Arabic-Indic digit 9        |
+|-----+---------+--------+-----------------------------|
+| ^   |    0651 | ّ       | SHADDA                      |
+| '   |    0621 | ء      | HAMZA                       |
+| oo  |    0652 | ْ       | SUKUN                       |
+|-----+---------+--------+-----------------------------|
+| .a  |    064e | َ       | FATHA                       |
+| aN  |    064b | ً       | FATHATAN                    |
+|-----+---------+--------+-----------------------------|
+| u   |    064f | ُ       | DAMMA                       |
+| .u  |    064f | ُ       | DAMMA                       |
+| uN  |    064c | ٌ       | DAMMATAN                    |
+|-----+---------+--------+-----------------------------|
+| i   |    0650 | ِ       | KASRA                       |
+| .i  |    0650 | ِ       | KASRA                       |
+| iN  |    064d | ٍ       | KASRATAN                    |
+|-----+---------+--------+-----------------------------|
+| ;   |    061b | ؛       | Arabic Semicolon            |
+| _   |    0640 | ـ      | TATWEEL                     |
+| ,   |    060c | ،      | Arabic Comma                |
+| ?   |    061f | ؟      | Arabic Question Mark        |
+|-----+---------+--------+-----------------------------|
+| _A  |    fdf2 | ﷲ      | Allah                       |
+| _S  |    fdfa | ﷺ      | SALLALLAHOU ALAYHE WASALLAM |
+
+*** Emacs
+
+#+headers: :results_switches ":tangle dist/arabic-qwerty-everywhere.el"
+#+begin_src emacs-lisp :var tbl=arabic-table :results code
+(keymap-to-emacs-quail "arabic-qwerty-everywhere" "arabic" (cdr tbl))
+#+end_src
+
+#+RESULTS:
+#+begin_src emacs-lisp :tangle dist/arabic-qwerty-everywhere.el
+(progn
+  (require 'quail)
+  (quail-define-package "arabic-qwerty-everywhere" "arabic" "arabic-qwerty-everywhere")
+  (quail-define-rules
+   ("a" 1575)
+   ("A" 1609)
+   ("~a" 1570)
+   ("'a" 1571)
+   ("'i" 1573)
+   ("-a" 1649)
+   ("b" 1576)
+   ("p" 1662)
+   ("t" 1578)
+   (".t" 1579)
+   ("j" 1580)
+   ("H" 1581)
+   ("x" 1582)
+   ("%h" 1670)
+   ("^h" 1669)
+   ("d" 1583)
+   (".d" 1584)
+   ("z" 1586)
+   ("r" 1585)
+   (".s" 1588)
+   ("s" 1587)
+   ("c" 1589)
+   (".c" 1590)
+   ("Z" 1592)
+   (".T" 1592)
+   ("T" 1591)
+   ("g" 1594)
+   ("e" 1593)
+   ("q" 1602)
+   ("f" 1601)
+   ("k" 1603)
+   ("l" 1604)
+   ("m" 1605)
+   ("n" 1606)
+   ("h" 1607)
+   (":h" 1577)
+   ("w" 1608)
+   ("'w" 1572)
+   ("y" 1610)
+   ("'y" 1574)
+   ("0" 1632)
+   ("1" 1633)
+   ("2" 1634)
+   ("3" 1635)
+   ("4" 1636)
+   ("5" 1637)
+   ("6" 1638)
+   ("7" 1639)
+   ("8" 1640)
+   ("9" 1641)
+   ("^" 1617)
+   ("'" 1569)
+   ("oo" 1618)
+   ("a" 1614)
+   ("aN" 1611)
+   ("u" 1615)
+   ("uN" 1612)
+   ("i" 1616)
+   ("iN" 1613)
+   (";" 1563)
+   ("J" 1600)
+   ("," 1548)
+   ("?" 1567)
+   ("_A" 65010)
+   ("_S" 65018)))
+#+end_src
+
+#+RESULTS:
+
+*** vim
+#+headers: :results silent
+#+begin_src emacs-lisp :var tbl=arabic-table
+(with-temp-buffer
+  (keymap-to-vim "arabic-qwerty-everywhere" (cdr tbl))
+  (write-file "dist/arabic-qwerty-everywhere.vim"))
+#+end_src
+
+** Hebrew
+*** Table
+#+name: hebrew-table
+| Key | Unicode | Hebrew | Name              |
+|-----+---------+--------+-------------------|
+| a   | 5d0     | א      | alef              |
+|-----+---------+--------+-------------------|
+| v   | 5d1     | ב      | bet               |
+| .v  | fb31    | בּ      | bet               |
+| b   | fb31    | בּ      | bet               |
+|-----+---------+--------+-------------------|
+| g   | 5d2     | ג      | gimel             |
+| .g  | fb32    | גּ      | gimel             |
+| j   | fb32    | גּ      | gimel             |
+|-----+---------+--------+-------------------|
+| d   | 5d3     | ד      | dalet             |
+| .d  | fb33    | דּ      | dalet with dagesh |
+|-----+---------+--------+-------------------|
+| h   | 5d4     | ה      | he                |
+| w   | 5d5     | ו      | vav               |
+| z   | 5d6     | ז      | zayin             |
+| H   | 5d7     | ח      | het               |
+| T   | 5d8     | ט      | tet               |
+| y   | 5d9     | י      | yod               |
+|-----+---------+--------+-------------------|
+| x   | 5db     | כ      | kaf               |
+| k   | fb3b    | כּ      | kaf               |
+| X   | 5da     | ך      | final kaf         |
+| K   | fb3a    | ךּ      | final kaf         |
+|-----+---------+--------+-------------------|
+| l   | 5dc     | ל      | lamed             |
+|-----+---------+--------+-------------------|
+| m   | 5de     | מ      | mem               |
+| M   | 5dd     | ם      | final mem         |
+|-----+---------+--------+-------------------|
+| n   | "5e0"   | נ      | nun               |
+| N   | 5df     | ן      | final nun         |
+|-----+---------+--------+-------------------|
+| c   | "5e1"   | ס      | samekh            |
+| .c  | fb41    | סּ      | samekh + dagesh   |
+|-----+---------+--------+-------------------|
+| e   | "5e2"   | ע      | ayin              |
+|-----+---------+--------+-------------------|
+| f   | "5e4"   | פ      | pe                |
+| p   | fb44    | פּ      | pe + dagesh       |
+| F   | "5e3"   | ף      | final pe          |
+| P   | fb43    | ףּ      | final fe + dagesh |
+|-----+---------+--------+-------------------|
+| ;t  | "5e6"   | צ      | tsadi             |
+| ;T  | "5e5"   | ץ      | final tsadi       |
+|-----+---------+--------+-------------------|
+| q   | "5e7"   | ק      | qof               |
+| r   | "5e8"   | ר      | resh              |
+|-----+---------+--------+-------------------|
+| s   | "5e9"   | ש      | shin              |
+| .s  | fb2a    | שׁ      | shin              |
+| S   | fb2b    | שׂ      | shin              |
+|-----+---------+--------+-------------------|
+| t   | 5ea     | ת      | tav               |
+| .t  | fb4a    | תּ      | tav               |
+|-----+---------+--------+-------------------|
+| _:  | 5b0     | ְ       | sheva             |
+| _E  | 5b1     | ֱ       | hataf segol       |
+| _A  | 5b2     | ֲ       | hataf patah       |
+| _O  | 5b3     | ֳ       | hataf qamats      |
+| i   | 5b4     | ִ       | hiriq             |
+| _Y  | 5b5     | ֵ       | tsere             |
+| E   | 5b6     | ֶ       | segol             |
+| AA  | 5b7     | ַ       | patah             |
+| AO  | 5b8     | ָ       | qamats            |
+| o   | 5b9     | ֹ       | holam             |
+| u   | 5bb     | ֻ       | qubuts            |
+| D   | 5bc     | ּ       | dagesh            |
+| ]T  | 5bd     | ֽ       | meteg             |
+| ]Q  | 5be     | ־      | maqaf             |
+| ]R  | 5bf     | ֿ       | rafe              |
+| ]p  | 5c0     | ׀      | paseq             |
+| ]SR | 5c1     | ׁ       | shin-dot          |
+| ]SL | 5c2     | ׂ       | sin-dot           |
+| ]P  | 5c3     | ׃      | sof-pasuq         |
+| VV  | 5f0     | װ      | double vav        |
+| VY  | 5f1     | ױ      | vav-yod           |
+| YY  | 5f2     | ײ      | double yod        |
+
+*** Emacs
+#+headers: :results_switches ":tangle dist/hebrew-qwerty-everywhere.el"
+#+begin_src emacs-lisp :var tbl=hebrew-table :results code
+(keymap-to-emacs-quail "hebrew-qwerty-everywhere" "hebrew" (cdr tbl))
+#+end_src
+
+#+RESULTS:
+#+begin_src emacs-lisp :tangle dist/hebrew-qwerty-everywhere.el
+(progn
+  (require 'quail)
+  (quail-define-package "hebrew-qwerty-everywhere" "hebrew" "hebrew-qwerty-everywhere")
+  (quail-define-rules
+   ("a" 1488)
+   ("v" 1489)
+   (".v" 64305)
+   ("b" 64305)
+   ("g" 1490)
+   (".g" 64306)
+   ("j" 64306)
+   ("d" 1491)
+   (".d" 64307)
+   ("h" 1492)
+   ("w" 1493)
+   ("z" 1494)
+   ("H" 1495)
+   ("T" 1496)
+   ("y" 1497)
+   ("x" 1499)
+   ("k" 64315)
+   ("X" 1498)
+   ("K" 64314)
+   ("l" 1500)
+   ("m" 1502)
+   ("M" 1501)
+   ("n" 1504)
+   ("N" 1503)
+   ("c" 1505)
+   (".c" 64321)
+   ("e" 1506)
+   ("f" 1508)
+   ("p" 64324)
+   ("F" 1507)
+   ("P" 64323)
+   (";t" 1510)
+   (";T" 1509)
+   ("q" 1511)
+   ("r" 1512)
+   ("s" 1513)
+   (".s" 64298)
+   ("S" 64299)
+   ("t" 1514)
+   (".t" 64330)
+   ("_:" 1456)
+   ("_E" 1457)
+   ("_A" 1458)
+   ("_O" 1459)
+   ("i" 1460)
+   ("_Y" 1461)
+   ("E" 1462)
+   ("AA" 1463)
+   ("AO" 1464)
+   ("o" 1465)
+   ("u" 1467)
+   ("D" 1468)
+   ("]T" 1469)
+   ("]Q" 1470)
+   ("]R" 1471)
+   ("]p" 1472)
+   ("]SR" 1473)
+   ("]SL" 1474)
+   ("]P" 1475)
+   ("VV" 1520)
+   ("VY" 1521)
+   ("YY" 1522)))
+#+end_src
+
+#+RESULTS:
+ 
+*** vim
+#+headers: :results silent
+#+begin_src emacs-lisp :var tbl=hebrew-table
+(with-temp-buffer
+  (keymap-to-vim "hebrew-qwerty-everywhere" (cdr tbl))
+  (write-file "dist/hebrew-qwerty-everywhere.vim"))
+#+end_src
+** TODO Russian
 * The code
 We are going to write the table to keymaps converters in emacs lisp,
 which is a dialect of lisp that runs the emacs editor.
@@ -74,326 +467,12 @@ This greatly simplifies the code in emacs:
       ,@(mapcar #'keymap-line-to-emacs-quail table))))
 
 #+end_src
-* Languages
-** Arabic
-*** Table
-#+name: arabic-table
-| Key | Unicode | Arabic | Name                        |
-|-----+---------+--------+-----------------------------|
-| Z   |  0638 | ظ      | ZAH                         |
-| v   |  0637 | ط      | TAH                         |
-|-----+---------+--------+-----------------------------|
-| d   |  062f | د      | DAL                         |
-| .d  |  0630 | ذ      | THAL                        |
-|-----+---------+--------+-----------------------------|
-| c   |  0635 | ص      | SAD                         |
-| .c  |  0636 | ض      | DAD                         |
-|-----+---------+--------+-----------------------------|
-| q   |  0642 | ق      | QAF                         |
-| f   |  0641 | ف      | FEH                         |
-|-----+---------+--------+-----------------------------|
-| g   |  063a | غ      | GHAIN                       |
-| e   |  0639 | ع      | AIN                         |
-|-----+---------+--------+-----------------------------|
-| o   |  0647 | ه      | HEH                         |
-| O   |  0629 | ة      | TEH MARBUTA                 |
-|-----+---------+--------+-----------------------------|
-| h   |  062d | ح      | HAH                         |
-| x   |  062e | خ      | KHAH                        |
-| j   |  062c | ج      | JEEM                        |
-|-----+---------+--------+-----------------------------|
-| S   |  0634 | ش      | SHEEN                       |
-| s   |  0633 | س      | SEEN                        |
-|-----+---------+--------+-----------------------------|
-| t   |  062a | ت      | TEH                         |
-| T   |  062b | ث      | THEH                        |
-|-----+---------+--------+-----------------------------|
-| r   |  0631 | ر      | REH                         |
-| z   |  0632 | ز      | ZAIN                        |
-|-----+---------+--------+-----------------------------|
-| b   |  0628 | ب      | BEH                         |
-| n   |  0646 | ن      | NOON                        |
-| l   |  0644 | ل      | LAM                         |
-| m   |  0645 | م      | MEEM                        |
-| k   |  0643 | ك      | KAF                         |
-|-----+---------+--------+-----------------------------|
-| A   |  0649 | ى      | ALEF MAKSURA                |
-| ~a  |  0622 | آ      | ALEF WITH MADDA ABOVE       |
-| 'a  |  0623 | أ      | ALEF with HAMZA ABOVE       |
-| a   |  0627 | ا      | ALEF                        |
-| 'i  |  0625 | إ      | ALEF with HAMZA BELOW       |
-| w   |  0648 | و      | WAW                         |
-| 'u  |  0624 | ؤ      | WAW with HAMZA ABOVE        |
-| uu  |  0648 | و      | WAW                         |
-| y   |  064a | ي      | YEH                         |
-| 'y  |  0626 | ئ      | YEH with HAMZA ABOVE        |
-| ii  |  064a | ي      | YEH                         |
-|-----+---------+--------+-----------------------------|
-| 0   |  0660 | ٠      | Arabic-Indic digit 0        |
-| 1   |  0661 | ١      | Arabic-Indic digit 1        |
-| 2   |  0662 | ٢      | Arabic-Indic digit 2        |
-| 3   |  0663 | ٣      | Arabic-Indic digit 3        |
-| 4   |  0664 | ٤      | Arabic-Indic digit 4        |
-| 5   |  0665 | ٥      | Arabic-Indic digit 5        |
-| 6   |  0666 | ٦      | Arabic-Indic digit 6        |
-| 7   |  0667 | ٧      | Arabic-Indic digit 7        |
-| 8   |  0668 | ٨      | Arabic-Indic digit 8        |
-| 9   |  0669 | ٩      | Arabic-Indic digit 9        |
-|-----+---------+--------+-----------------------------|
-| ^   |  0651 | ّ       | SHADDA                      |
-| '   |  0621 | ء      | HAMZA                       |
-| °   |  0652 | ْ       | SUKUN                       |
-| a  |  064e | َ       | FATHA                       |
-| aN |  064b | ً       | FATHATAN                    |
-| u   |  064f | ُ       | DAMMA                       |
-| uN  |  064c | ٌ       | DAMMATAN                    |
-| i   |  0650 | ِ       | KASRA                       |
-| iN  |  064d | ٍ       | KASRATAN                    |
-| ;   |  061b | ؛       | Arabic Semicolon            |
-| J   |  0640 | ـ      | TATWEEL                     |
-| ,   |  060c | ،      | Arabic Comma                |
-| ?   |  061f | ؟      | Arabic Question Mark        |
-|-----+---------+--------+-----------------------------|
-| _A  |  fdf2 | ﷲ      | Allah                      |
-| _S  |  fdfa | ﷺ      | SALLALLAHOU ALAYHE WASALLAM |
-
-*** Emacs
-
-#+headers: :results_switches ":tangle dist/arabic-qwerty-everywhere.el"
-#+begin_src emacs-lisp :var tbl=arabic-table :results code
-(keymap-to-emacs-quail "arabic-qwerty-everywhere" "arabic" (cdr tbl))
-#+end_src
-
-#+RESULTS:
-#+begin_src emacs-lisp :tangle dist/arabic-qwerty-everywhere.el
-(progn
-  (require 'quail)
-  (quail-define-package "arabic-qwerty-everywhere" "arabic" "arabic-qwerty-everywhere")
-  (quail-define-rules
-   ("Z" 1592)
-   ("v" 1591)
-   ("d" 1583)
-   (".d" 1584)
-   ("c" 1589)
-   (".c" 1590)
-   ("q" 1602)
-   ("f" 1601)
-   ("g" 1594)
-   ("e" 1593)
-   ("o" 1607)
-   ("O" 1577)
-   ("h" 1581)
-   ("x" 1582)
-   ("j" 1580)
-   ("S" 1588)
-   ("s" 1587)
-   ("t" 1578)
-   ("T" 1579)
-   ("r" 1585)
-   ("z" 1586)
-   ("b" 1576)
-   ("n" 1606)
-   ("l" 1604)
-   ("m" 1605)
-   ("k" 1603)
-   ("A" 1609)
-   ("~a" 1570)
-   ("'a" 1571)
-   ("a" 1575)
-   ("'i" 1573)
-   ("w" 1608)
-   ("'u" 1572)
-   ("uu" 1608)
-   ("y" 1610)
-   ("'y" 1574)
-   ("ii" 1610)
-   ("0" 1632)
-   ("1" 1633)
-   ("2" 1634)
-   ("3" 1635)
-   ("4" 1636)
-   ("5" 1637)
-   ("6" 1638)
-   ("7" 1639)
-   ("8" 1640)
-   ("9" 1641)
-   ("^" 1617)
-   ("'" 1569)
-   ("°" 1618)
-   ("a" 1614)
-   ("aN" 1611)
-   ("u" 1615)
-   ("uN" 1612)
-   ("i" 1616)
-   ("iN" 1613)
-   (";" 1563)
-   ("J" 1600)
-   ("," 1548)
-   ("?" 1567)
-   ("_A" 65010)
-   ("_S" 65018)))
-#+end_src
-
-#+RESULTS:
-
-*** vim
-#+headers: :results silent
-#+begin_src emacs-lisp :var tbl=arabic-table
-(with-temp-buffer
-  (keymap-to-vim "arabic-qwerty-everywhere" (cdr tbl))
-  (write-file "dist/arabic-qwerty-everywhere.vim"))
-#+end_src
-
-** Hebrew
-*** Table
-#+name: hebrew-table
-| Key | Unicode | Hebrew | Name              |
-|-----+---------+--------+-------------------|
-| a   | 5d0     | א      | alef              |
-| b   | 5d1     | ב      | bet               |
-| .b  | fb31    | בּ      | bet               |
-| g   | 5d2     | ג      | gimel             |
-| d   | 5d3     | ד      | dalet             |
-| h   | 5d4     | ה      | he                |
-| w   | 5d5     | ו      | vav               |
-| z   | 5d6     | ז      | zayin             |
-| ch  | 5d7     | ח      | het               |
-| T   | 5d8     | ט      | tet               |
-| y   | 5d9     | י      | yod               |
-| k   | 5db     | כ      | kaf               |
-| .k  | fb3b    | כּ      | kaf               |
-| K   | 5da     | ך      | final kaf         |
-| .K  | fb3a    | ךּ      | final kaf         |
-| l   | 5dc     | ל      | lamed             |
-| m   | 5de     | מ      | mem               |
-| M   | 5dd     | ם      | final mem         |
-| n   | "5e0"   | נ      | nun               |
-| N   | 5df     | ן      | final nun         |
-| c   | "5e1"   | ס      | samekh            |
-| e   | "5e2"   | ע      | ayin              |
-| f   | "5e4"   | פ      | pe                |
-| p   | fb44    | פּ      | pe + dagesh       |
-| F   | "5e3"   | ף      | final pe          |
-| P   | fb43    | ףּ      | final fe + dagesh |
-| ts  | "5e6"   | צ      | tsadi             |
-| TS  | "5e5"   | ץ      | final tsadi       |
-| q   | "5e7"   | ק      | qof               |
-| r   | "5e8"   | ר      | resh              |
-| s   | "5e9"   | ש      | shin              |
-| ^s  | fb2a    | שׁ      | shin              |
-| .s  | fb2b    | שׂ      | shin              |
-| t   | 5ea     | ת      | tav               |
-| .t  | fb4a    | תּ      | tav               |
-|-----+---------+--------+-------------------|
-| _:  | 5b0     | ְ       | sheva             |
-| _E  | 5b1     | ֱ       | hataf segol       |
-| _A  | 5b2     | ֲ       | hataf patah       |
-| _O  | 5b3     | ֳ       | hataf qamats      |
-| i   | 5b4     | ִ       | hiriq             |
-| _Y  | 5b5     | ֵ       | tsere             |
-| E   | 5b6     | ֶ       | segol             |
-| AA  | 5b7     | ַ       | patah             |
-| AO  | 5b8     | ָ       | qamats            |
-| o   | 5b9     | ֹ       | holam             |
-| u   | 5bb     | ֻ       | qubuts            |
-| D   | 5bc     | ּ       | dagesh            |
-| ]T  | 5bd     | ֽ       | meteg             |
-| ]Q  | 5be     | ־      | maqaf             |
-| ]R  | 5bf     | ֿ       | rafe              |
-| ]p  | 5c0     | ׀      | paseq             |
-| SR  | 5c1     | ׁ       | shin-dot          |
-| SL  | 5c2     | ׂ       | sin-dot           |
-| ]P  | 5c3     | ׃      | sof-pasuq         |
-| VV  | 5f0     | װ      | double vav        |
-| VY  | 5f1     | ױ      | vav-yod           |
-| YY  | 5f2     | ײ      | double yod        |
-
-*** Emacs
-#+headers: :results_switches ":tangle dist/hebrew-qwerty-everywhere.el"
-#+begin_src emacs-lisp :var tbl=hebrew-table :results code
-(keymap-to-emacs-quail "hebrew-qwerty-everywhere" "hebrew" (cdr tbl))
-#+end_src
-
-#+RESULTS:
-#+begin_src emacs-lisp :tangle dist/hebrew-qwerty-everywhere.el
-(progn
-  (require 'quail)
-  (quail-define-package "hebrew-qwerty-everywhere" "hebrew" "hebrew-qwerty-everywhere")
-  (quail-define-rules
-   ("a" 1488)
-   ("b" 1489)
-   (".b" 64305)
-   ("g" 1490)
-   ("d" 1491)
-   ("h" 1492)
-   ("w" 1493)
-   ("z" 1494)
-   ("ch" 1495)
-   ("T" 1496)
-   ("y" 1497)
-   ("k" 1499)
-   (".k" 64315)
-   ("K" 1498)
-   (".K" 64314)
-   ("l" 1500)
-   ("m" 1502)
-   ("M" 1501)
-   ("n" 1504)
-   ("N" 1503)
-   ("c" 1505)
-   ("e" 1506)
-   ("f" 1508)
-   ("p" 64324)
-   ("F" 1507)
-   ("P" 64323)
-   ("ts" 1510)
-   ("TS" 1509)
-   ("q" 1511)
-   ("r" 1512)
-   ("s" 1513)
-   ("^s" 64298)
-   (".s" 64299)
-   ("t" 1514)
-   (".t" 64330)
-   ("_:" 1456)
-   ("_E" 1457)
-   ("_A" 1458)
-   ("_O" 1459)
-   ("i" 1460)
-   ("_Y" 1461)
-   ("E" 1462)
-   ("AA" 1463)
-   ("AO" 1464)
-   ("o" 1465)
-   ("u" 1467)
-   ("D" 1468)
-   ("]T" 1469)
-   ("]Q" 1470)
-   ("]R" 1471)
-   ("]p" 1472)
-   ("SR" 1473)
-   ("SL" 1474)
-   ("]P" 1475)
-   ("VV" 1520)
-   ("VY" 1521)
-   ("YY" 1522)))
-#+end_src
-
-#+RESULTS:
- 
-*** vim
-#+headers: :results silent
-#+begin_src emacs-lisp :var tbl=hebrew-table
-(with-temp-buffer
-  (keymap-to-vim "hebrew-qwerty-everywhere" (cdr tbl))
-  (write-file "dist/hebrew-qwerty-everywhere.vim"))
-#+end_src
 * References
 bibliographystyle:unsrt
 bibliography:README.bib
 * Bibtex entries                                                   :noexport:
 
-#+BEGIN_SRC bibtex :tangle README.bib
+#+BEGIN_SRC bibtex :tangle README.bib :eval no
 @article{LiteratePrograKnuth1984,
   author = {Knuth, D. E.},
   doi = {10.1093/comjnl/27.2.97},
